--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -31,6 +31,7 @@
   "Comment": "Commentary",
   "Comments": "Comments",
   "Comments need to be reduced": "The comment will be reduced to {maxLen} characters",
+  "type-your-comment": "Type your comment...",
   "Copyright": "Copyright",
   "Date": "Date",
   "Date of uploading": "Date of uploading",
@@ -66,6 +67,7 @@
   "Is not uploaded": "Is not uploaded {name}",
   "KB": "KB",
   "Last report reason": "Last report reason:",
+  "abusing-text-placeholder": "Message for developers",
   "Limit size": "Limit size",
   "MB": "MB",
   "Max size exceeded": "Max size exceeded. Limit - {maxSize} GB.",
@@ -89,7 +91,7 @@
   "Report form": "Report form",
   "Send all other title 1": "We will append all other {count} file",
   "Send all other title 2": "We will append all other {count} files",
-  "Send all report": "Send all: {report}",
+  "Send all report": "Send all: {text}",
   "Send all text": "Send all  {count} valid ({size})",
   "Send all text ignor": "Send all other {count} ({size})",
   "Send bug-report about the video to developers": "Send bug-report about the video to developers",
@@ -135,9 +137,9 @@
   "The feature will be implemented soon": "The feature was implemented soon",
   "The video preview is unavailable": "The video preview is unavailable",
   "Type is OK": "Type is OK",
-    "Duration is OK": "Duration is OK (max - {maxDuration} min)",
-    "Duration is exceeded":"Duration is exceeded (max - {maxDuration} min)",
-    "Duration is not defined":"Duration is not defined",
+  "Duration is OK": "Duration is OK (max - {maxDuration} min)",
+  "Duration is exceeded": "Duration is exceeded (max - {maxDuration} min)",
+  "Duration is not defined": "Duration is not defined",
   "Upload all done with error": "Upload all done with error {err}",
   "Upload selected text 1": "Upload selected",
   "Upload selected text 2": "Upload selected ({count})",
