--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -31,6 +31,7 @@
   "Comment": "Комментарий",
   "Comments": "Комментарии",
   "Comments need to be reduced": "Комментарий должен быть сокращен до {maxLen} символов",
+  "type-your-comment": "Поле для комметариев...",
   "Copyright": "Все права защищены",
   "Date": "Дата",
   "Date of uploading": "Дата загрузки",
@@ -66,6 +67,7 @@
   "Is not uploaded": "Файл не загружен {name}",
   "KB": "КБ",
   "Last report reason": "Предыдущее сообщение об ошибке:",
+  "abusing-text-placeholder": "Сообщение разработчикам по поводу этого видео или в целом о сервисе",
   "Limit size": "Лимит размера файла",
   "MB": "МБ",
   "Max size exceeded": "Лимит размера файла превышен. Лимит - {maxSize} ГБ.",
@@ -89,7 +91,7 @@
   "Report form": "Форма оповещения",
   "Send all other title 1": "Мы добавим в загрузку {count} файл",
   "Send all other title 2": "Мы добавим в загрузку остальные {count} файла",
-  "Send all report": "Загрузить все: {report}",
+  "Send all report": "Загрузить все: {text}",
   "Send all text": "Отправить все {count} ({size})",
   "Send all text ignor": "Отправить все остальные {count} ({size})",
   "Send bug-report about the video to developers": "Оповестить разработчиков об ошибке",
@@ -134,9 +136,9 @@
   "The feature was implemented soon": "Функция будет реализована в ближайшее время",
   "The video preview is unavailable": "Предварительный просмотр недоступен",
   "Type is OK": "Тип файла поддерживается",
-    "Duration is OK": "Длительность в пределах нормы (макс. - {maxDuration} мин.)",
-    "Duration is exceeded":"Длительность превышена (макс. - {maxDuration} мин.)",
-    "Duration is not defined":"Длительность не определена",
+  "Duration is OK": "Длительность в пределах нормы (макс. - {maxDuration} мин.)",
+  "Duration is exceeded": "Длительность превышена (макс. - {maxDuration} мин.)",
+  "Duration is not defined": "Длительность не определена",
   "Upload all done with error": "Возникла ошибка при загрузке всех файлов: {err}",
   "Upload selected text 1": "Загрузить выделенный",
   "Upload selected text 2": "Загрузить выделенные ({count})",
